@@ -542,7 +542,15 @@ SPVM::Test - SPVM test module
     
     # sort
     {
-      my $comparator  = sub : int ($self : self, $object1 : object, $object2 : object) {
+      my $minimals = new TestCase::Minimal[3];
+      $minimals->[0] = TestCase::Minimal->new;
+      $minimals->[0]{x} = 3;
+      $minimals->[1] = TestCase::Minimal->new;
+      $minimals->[1]{x} = 1;
+      $minimals->[2] = TestCase::Minimal->new;
+      $minimals->[2]{x} = 2;
+      
+      sort_obj($minimals, sub : int ($self : self, $object1 : object, $object2 : object) {
         my $minimal1 = (TestCase::Minimal)$object1;
         my $minimal2 = (TestCase::Minimal)$object2;
         
@@ -558,20 +566,7 @@ SPVM::Test - SPVM test module
         else {
           return 0;
         }
-      };
-      
-      my $minimals = new TestCase::Minimal[3];
-      $minimals->[0] = TestCase::Minimal->new;
-      $minimals->[0]{x} = 3;
-      $minimals->[1] = TestCase::Minimal->new;
-      $minimals->[1]{x} = 1;
-      $minimals->[2] = TestCase::Minimal->new;
-      $minimals->[2]{x} = 2;
-      
-      my $objects = new object[scalar @$minimals];
-      for (my $i = 0; $i < @$objects; $i++) { $objects->[$i] = $minimals->[$i]; }
-      sort_obj($objects, $comparator);
-      for (my $i = 0; $i < @$objects; $i++) { $minimals->[$i] = (TestCase::Minimal)$objects->[$i]; }
+      });
       
       print($minimals->[0]{x} . " " . $minimals->[1]{x} . " " . $minimals->[2]{x} . "\n");
     }
@@ -1773,7 +1768,7 @@ SPVM::Test - SPVM test module
     return 0;
   }
 
-  sub sort_obj : void ($values : object[], $comparator : TestCase::Comparator) {
+  sub sort_obj : void ($values : oarray, $comparator : TestCase::Comparator) {
 
     my $change_cnt = @$values - 1;
     while( $change_cnt > 0){
